[gd_scene load_steps=7 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UserInterface/UserInterface.gd" type="Script" id=2]
[ext_resource path="res://src/UserInterface/Title.tscn" type="PackedScene" id=3]
[ext_resource path="res://src/UserInterface/RetryButton.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/UserInterface/SceneChangeButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://src/UserInterface/QuitButton.tscn" type="PackedScene" id=6]

[node name="UserInterface" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="Score" type="Label" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -380.0
margin_top = 50.0
margin_right = -50.0
margin_bottom = 150.0
text = "Score: %s"
valign = 1

[node name="PauseOverlay" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 0.321569 )

[node name="Title" parent="PauseOverlay" instance=ExtResource( 3 )]
margin_top = 150.0
margin_bottom = 320.0
text = "Paused"

[node name="PauseMenu" type="VBoxContainer" parent="PauseOverlay"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -135.0
margin_top = -135.0
margin_right = 135.0
margin_bottom = 135.0

[node name="RetryButton2" parent="PauseOverlay/PauseMenu" instance=ExtResource( 4 )]

[node name="MainScreenButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 5 )]
margin_top = 91.0
margin_right = 274.0
margin_bottom = 178.0
text = "Back to Main Screen"
next_scene_path = "res://src/Screens/MainScreen.tscn"

[node name="QuitButton" parent="PauseOverlay/PauseMenu" instance=ExtResource( 6 )]
margin_top = 182.0
margin_right = 274.0
margin_bottom = 270.0
